--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --background: #424242;
@@ -20,7 +22,7 @@
 }
 
 body {
-  background-color:  bg-gray-950 text-white;
+  background-color: bg-gray-950 text-white;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
